- added a user database with API calls to authenticate, register and set users as admins - added progress status of stories in landing page, can only upvote/downvote once + displays history of user upvotes downvotes - authenticate users correctly - added padding to the bottom of page so there's whitespace at the end of pages

--- a/writeit/src/App.css
+++ b/writeit/src/App.css
@@ -35,7 +35,7 @@
 
 main {
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 
